; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_pointers.c_check_pointers.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_pointers.c_check_pointers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_api_table = type { i32 }

@.str = private unnamed_addr constant [44 x i8] c"found uninitialized function pointer at %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"Missing pointer in pointers.c\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gl_api_table*)* @check_pointers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_pointers(%struct.gl_api_table* %0) #0 {
  %2 = alloca %struct.gl_api_table*, align 8
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.gl_api_table* %0, %struct.gl_api_table** %2, align 8
  store i32 0, i32* %4, align 4
  %6 = load %struct.gl_api_table*, %struct.gl_api_table** %2, align 8
  %7 = bitcast %struct.gl_api_table* %6 to i8**
  store i8** %7, i8*** %3, align 8
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %24, %1
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %27

12:                                               ; preds = %8
  %13 = load i8**, i8*** %3, align 8
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i8*, i8** %13, i64 %15
  %17 = load i8*, i8** %16, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %23, label %19

19:                                               ; preds = %12
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = call i32 @gl_problem(i32* null, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  br label %23

23:                                               ; preds = %19, %12
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %5, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %5, align 4
  br label %8

27:                                               ; preds = %8
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @gl_problem(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
